--- a/lab2/Views/Account/Login.cshtml
+++ b/lab2/Views/Account/Login.cshtml
@@ -19,3 +19,5 @@
 {
     <p style="color:red;">@ViewBag.Error</p>
 }
+
+<p>Не маєте акаунту? <a href="@Url.Action("Register", "Account")">Заєструватися</a></p>
